--- a/work.html
+++ b/work.html
@@ -140,7 +140,7 @@
 	  			<div class="col-md-6 portfolio-wrap ftco-animate">
 	  				<div class="row align-items-center">
 	  					<div class="col-md-12">
-		  					<div class="img js-fullheight" style="background-image: url(images/work-4.jpg);">
+		  					<div class="img js-fullheight" style="background-image: url(images/miriam.jpg);">
 		  						
 		  					</div>
 	  					</div>
