--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	        	<li class="nav-item"><a href="Index.html" class="nav-link">Home</a></li>
 	        	<li class="nav-item"><a href="work.html" class="nav-link">Professional Work Experience</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
-			  <li class="nav-item"><a href="work.html" class="nav-link">Professional Work Experience</a>
+			  <li class="nav-item"><a href="#" class="nav-link">Submit Job</a>
 				<div class="dropdown">
 					<button class="dropbtn">work With</button>
 					<div class="dropdown-content">
